Added License and other stuff

--- a/samples/config.yml
+++ b/samples/config.yml
@@ -1,6 +1,7 @@
 ---
-#wsdir  : '~/.config/initmux/wspaces'
-#ymldir : '~/.config/initmux/yamls'
+wsdir : '~/.config/initmux/wspaces'
+sdir  : '~/.config/initmux/sessions'
+terminal: 'termite'
 #
 #skel: #{
 #
